--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.3
 idna==2.9
 itsdangerous==1.1.0
