--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ blinker==1.4
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
-elasticsearch==7.6.0
 Flask==1.1.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
@@ -11,6 +10,7 @@ Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
